try to fix white spot bug at bottom on mobile viewport

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   font-size: 18px;
   width: 100%;
   margin: 0;
-  height: calc(100vw + 60px);
+  height: calc(100vh + 60px);
   min-height: calc(100vh + 60px);
   display: -ms-grid;
   display: grid;
@@ -690,6 +690,13 @@ select {
     -ms-grid-columns: 1fr 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr 1fr 1fr;
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  .skills__nav-link {
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
 
