--- a/sass/partials/_skills.scss
+++ b/sass/partials/_skills.scss
@@ -100,3 +100,9 @@
     width: 100%;
   }
 }
+@media only screen and (max-width: 330px) {
+  .skills__nav-link {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
